[tool.poetry]
name = "repl_nix_Enough"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
telegram = "^0.0.1"
bs4 = "^0.0.1"
colorama = "^0.4.6"
discord = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
